tested interaction between fetching using react query and lazy loading a route fruther testing required for prefetching

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
     "noUncheckedIndexedAccess": true,
     "noImplicitAny": true
   },
-  "include": ["src"],
+  "include": ["src/**/*.{tsx , ts}"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
