--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-query": "^3.39.1",
+    "react-router-dom": "6",
     "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
@@ -20,7 +23,7 @@
     "postcss": "^8.4.14",
     "prettier": "^2.7.0",
     "tailwindcss": "^3.0.24",
-    "typescript": "^4.6.3",
+    "typescript": "^4.7.3",
     "vite": "^2.9.9"
   }
 }
