--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@prisma/client": "^3.15.2",
     "axios": "^0.27.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -22,6 +23,7 @@
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "prettier": "^2.7.0",
+    "prisma": "^3.15.2",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.7.3",
     "vite": "^2.9.9"
