changed import sources to js until i understand the problem

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src/**/*.{tsx , ts}"],
+  "include": ["src/**/*.{tsx , ts}", "./src/vite-env.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
