--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,8 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src/**/*.{tsx , ts}", "./src/vite-env.d.ts"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+
+  "references": [{ "path": "./tsconfig.node.json" }],
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "src/**/*.spec.ts"]
 }
