--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "react-dom": "^18.0.0",
     "react-query": "^3.39.1",
     "react-router-dom": "6",
+    "sharp": "^0.30.6",
     "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/sharp": "^0.30.4",
+    "@types/svgo": "^2.6.3",
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
